gke/homolog/deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: protesto-aquisicao-hml
  labels:
    name: protesto-aquisicao-hml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pa-api-tubo-sp-hml
  namespace: protesto-aquisicao-hml
spec:
  selector:
    matchLabels:
      app: pa-api-tubo-sp-hml
  #replicas: 2
  template:
    metadata:
      labels:
        app: pa-api-tubo-sp-hml
        squad: protesto-aquisicao
        type: batch
        value-stream: data
        environment: homolog
    spec:
      containers:
      - name: pa-api-tubo-sp-hml
        image: gcr.io/bvs-main-98cb/pa-api-tubo-sp-hml
        resources:
          requests:
            memory: "300Mi"
            cpu: "500m"
          limits:
            memory: "500Mi"
            cpu: "700m"
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: pa-api-tubo-sp-hml
  namespace: protesto-aquisicao-hml
spec:
  ports:
  - name: http    
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: pa-api-tubo-sp-hml
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pa-ingress-interno-tubo-sp-hml
  namespace: protesto-aquisicao-hml
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "180"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "180"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "180"
spec:
  rules:
  - host: iapi-hml-tubosp.bvsnet.com.br
    http:
      paths:
      - path: /
        backend:
          serviceName: pa-api-tubo-sp-hml
          servicePort: 80
  tls:
  - hosts:
    - iapi-hml-tubosp.bvsnet.com.br
    secretName: pa-bvsnet-tls-hml
